statum-macros/tests/ui/invalid_transition_map_undeclared_edge.stderr
error[E0308]: mismatched types
  --> tests/ui/invalid_transition_map_undeclared_edge.rs:53:42
   |
53 |     let _ = review.transition_map(|data| data);
   |                                          ^^^^ expected `()`, found `ReviewData`
   |
help: consider ignoring the value
   |
53 |     let _ = review.transition_map(|data| _ = data);
   |                                          +++
